--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 
 <body>
-    <button id="but">Salut</button>
+    <button id="but1">Image</button>
+    <button id="but2">Text</button>
+    <button id="but3">DATA</button>
+    <button id="but4">Evil JS</button>
+    <p id="txt"></p>
+    <div id="snippet"></div>
+    <ul id="list"></ul>
     <script>
         function disImg(ajax) {
-            console.log(ajax);
             let arr = new Uint8Array(ajax.response);
-            console.log(arr);
             let raw = String.fromCharCode.apply(null, arr);
-            console.log(raw)
             document.body.innerHTML += "<img alt='lol' src='data:image/jpg;base64," + btoa(raw) + "'>";
+            add_event();
         }
 
-        function new_ajax(url, cb) {
+        function new_ajax_img(url, cb) {
             let ajax = new XMLHttpRequest();
             ajax.open('GET', url, true);
             ajax.responseType = 'arraybuffer';
@@ -33,9 +37,70 @@
             });
         }
 
-        document.querySelector("#but").addEventListener("click", function() {
-            new_ajax("gel.png", disImg);
-        });
+        function new_ajax_txt(url, loc, type) {
+            let ajax = new XMLHttpRequest();
+            ajax.open('GET', url, true);
+            ajax.send();
+            ajax.addEventListener("readystatechange", function() {
+                if (this.readyState === 4 && this.status === 200) {
+                    let test = loc + type;
+                    if (type === 'tc') {
+                        loc.textContent += ajax.response;
+                    } else if (type === 'ih') {
+                        loc.innerHTML += ajax.response;
+                    }
+
+                }
+            });
+        }
+
+        function new_ajax_json(url) {
+            let ajax = new XMLHttpRequest();
+            ajax.open('GET', url, true);
+            ajax.send();
+            ajax.addEventListener("readystatechange", function() {
+                if (this.readyState === 4 && this.status === 200) {
+                    let json = JSON.parse(ajax.response)
+                    for (let value in json) {
+                        document.querySelector("#list").innerHTML += '<li>Nom : <b>' + json[value]['name'] + '</b>, race : <i>' + json[value]['race'] + '</i>.';
+                    }
+                }
+            });
+        }
+
+        function eval_evil(url) {
+            let ajax = new XMLHttpRequest();
+            ajax.open('GET', url, true);
+            ajax.send();
+            ajax.addEventListener("readystatechange", function() {
+                if (this.readyState === 4 && this.status === 200) {
+                    eval(ajax.response);
+                }
+            });
+        }
+
+        add_event();
+
+        function add_event() {
+            document.querySelector("#but1").addEventListener("click", function() {
+                console.log('a');
+                new_ajax_img("gel.png", disImg);
+            });
+
+            document.querySelector("#but2").addEventListener("click", function() {
+                console.log('b');
+                new_ajax_txt("test.txt", document.querySelector("#txt"), 'tc');
+                new_ajax_txt("snippet.html", document.querySelector("#snippet"), 'ih');
+            });
+
+            document.querySelector("#but3").addEventListener("click", function() {
+                new_ajax_json('data.json');
+            });
+
+            document.querySelector("#but4").addEventListener("click", function() {
+                eval_evil("evil.js");
+            });
+        }
     </script>
 
 </body>
